--- a/betterize-slim.css
+++ b/betterize-slim.css
@@ -4,14 +4,14 @@
 /* --------------------------------------------------------------------------- /
 /* betterize-slim.css -- Modern normalization, better cross-browser design --- /
 /* @author Stephen M Irving -- <@metric_dev> --------------------------------- /
-/* version 2.0.6 -- 03/26/2024 ----------------------------------------------- /
+/* version 2.0.7 -- 03/28/2024 ----------------------------------------------- /
 /* --------------------------------------------------------------------------- /
 /* ////////////////////////////////////////////////////////////////////////// */
 
 
 /* --------------------------------------------------------------------------- /
 /* --------------------------------------------------------------------------- /
-/* #BASE STYLES: opinionated defaults ---------------------------------------- /
+/* #BASE STYLES: Opinionated defaults and base element styles ---------------- /
 /* --------------------------------------------------------------------------- /
 /* -------------------------------------------------------------------------- */
 
@@ -25,7 +25,9 @@
  * 2. Setting `min-width: 0` here is a VERY opinionated decision. It can save
  *    you a lot of time trying to figure out a ton of odd and unintuitive
  *    behavior, especially with flexbox, but it can also cause unexpected
- *    issues if you aren't aware it is here.
+ *    issues if you aren't aware it is here. If an element is unexpectedly
+ *    shrinking down to nothing, try setting an explicit `min-width` to
+ *    overwrite this declaration.
  * 3. Ensure background images do not repeat by default..
  */
 
@@ -56,8 +58,8 @@
  *  4. Set the default font size in an accessible way (such that a user
  *     can change the default size with the browser settings).
  *  5. Normalize default `line-height` across browsers.
- *  6. Set a new default for `overflow-wrap` on the root element since it
- *     is an inherited property.
+ *  6. Set a new default for `word-wrap` (alias for `overflow-wrap`) on the root
+ *     element since it is an inherited property.
  *  7. Allow the browser to automatically break words at appropriate hyphenation
  *     points. Ensure you specificy a language using the `lang` HTML attribute.
  *     to guarantee the automatic hyphenation applied is language-specific.
@@ -114,7 +116,6 @@ html {
   font-size: 1em; /* 4 */
   line-height: 1.15; /* 5 */
   word-wrap: break-word; /* 6 */
-  overflow-wrap: break-word; /* 6 */
   -webkit-hyphens: auto; /* 7 */
   hyphens: auto; /* 7 */
   -moz-tab-size: 4; /* 8 */
@@ -363,6 +364,8 @@ samp {
     ui-monospace,
     /* macOS 10.10+ */
     Menlo,
+    /* macOS fallback */
+    Monaco,
     /* Windows 6+ */
     Consolas,
     /* Android 4+ */
@@ -424,7 +427,7 @@ kbd {
 }
 
 /*
- * 1. Dont't allow content to break outside
+ * 1. Dont't allow content to break outside.
  * 2. Remove top margin to avoid vertical margin collapse.
  * 3. Overwrite physical margin properties with logical margin properties for
  *    browsers that support it to improve internationalization.
@@ -438,12 +441,12 @@ pre {
 }
 
 :where(pre:has(code)) {
-  max-width: 120ch;
-  max-inline-size: 120ch;
-  max-height: 340px;
-  max-block-size: 340px;
-  padding-block: 0.5rem;
-  padding-inline: 1rem;
+  max-width: 110ch;
+  max-inline-size: 110ch;
+  max-height: 21.25rem;
+  max-block-size: 21.25rem;
+  padding-block: 0.25rem;
+  padding-inline: 0.5rem;
   background-color: #eee;
 }
 
