--- a/betterize-slim.less
+++ b/betterize-slim.less
@@ -4,14 +4,14 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize-slim.less -- Modern normalization, better cross-browser design ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 2.0.6 -- 03/26/2024 -------------------------------------------- ///
+/// version 2.0.7 -- 03/28/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
 
 ////////////////////////////////////////////////////////////////////////////////
 // -------------------------------------------------------------------------- //
-// #BASE STYLES: opinionated default base element styles -------------------- //
+// #BASE STYLES: Opinionated defaults and base element styles --------------- //
 // -------------------------------------------------------------------------- //
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -24,7 +24,9 @@
 // 2. Setting `min-width: 0` here is a *very* opinionated decision. It can save
 //    you a lot of time trying to figure out a ton of odd and unintuitive
 //    behavior, especially with flexbox, but it can also cause unexpected
-//    issues if you aren't aware it is here.
+//    issues if you aren't aware it is here. If an element is unexpectedly
+//    shrinking down to nothing, try setting an explicit `min-width` to
+//    overwrite this declaration.
 // 3. Ensure background images do not repeat by default.
 
 *,
@@ -53,8 +55,8 @@
 //  4. Set the default font size in an accessible way (such that a user
 //     can change the default size with the browser settings).
 //  5. Normalize default `line-height` across browsers.
-//  6. Set a new default for `overflow-wrap` on the root element since it
-//     is an inherited property.
+//  6. Set a new default for `word-wrap` (alias for `overflow-wrap`) on the root
+//     element since it is an inherited property.
 //  7. Allow the browser to automatically break words at appropriate hyphenation
 //     points. Ensure you specificy a language using the `lang` HTML attribute.
 //     to guarantee the automatic hyphenation applied is language-specific.
@@ -107,7 +109,7 @@ html {
     'Noto Color Emoji'; // 3
   font-size: 1em; // 4
   line-height: 1.15; // 5
-  overflow-wrap: break-word; // 6
+  word-wrap: break-word; // 6
   -webkit-hyphens: auto; // 7
   hyphens: auto; // 7
   -moz-tab-size: 4; // 8
@@ -155,10 +157,9 @@ html {
 // 2. Force the body to always take up the whole screen.
 // 3. Remove the body margin in all browsers.
 // 4. As a best practice, apply a default `background-color` and `color`.
-//    Also set a faint background gradient and apply an inverted scheme
-//    for `prefers-color-scheme: dark` To overwrite, use the `background`
-//    shorthand property.
-//    shorthand property.lc]\\\\
+//    As an opinonated default, apply a faint background gradient, and apply an
+//    inverted scheme for `prefers-color-scheme: dark`. To overwrite, use the
+//    `background` shorthand property.
 // 5. Set a normal font-size default.
 // 6. Set an opionated line-height for other elements to inherit.
 // 7. Set an explicit `text-align: left` so that we can later use
@@ -324,6 +325,8 @@ samp {
     ui-monospace,
     // macOS 10.10+
     Menlo,
+    // macOS fallback
+    Monaco,
     // Windows 6+
     Consolas,
     // Android 4+
@@ -382,7 +385,7 @@ kbd {
   white-space: nowrap;
 }
 
-// 1. Dont't allow content to break outside
+// 1. Dont't allow content to break outside.
 // 2. Remove top margin to avoid vertical margin collapse.
 // 3. Overwrite physical margin properties with logical margin properties for
 //    browsers that support it to improve internationalization.
@@ -395,12 +398,14 @@ pre {
 }
 
 :where(pre:has(code)) {
-  max-width: 120ch;
-  max-inline-size: 120ch;
-  max-height: 340px;
-  max-block-size: 340px;
-  padding-block: 0.5rem;
-  padding-inline: 1rem;
+  max-width: 110ch;
+  max-inline-size: 110ch;
+  max-height: 21.25rem;
+  max-block-size: 21.25rem;
+  padding-block: 0.25rem;
+  padding-inline: 0.5rem;
+  border: 1px solid #ddd;
+  border-radius: 3px;
   background-color: #eee;
 }
 
